spring security basic update source code.

--- a/001-spring-security-basic/pom.xml
+++ b/001-spring-security-basic/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.isaachome</groupId>
-	<artifactId>ssia-ch2</artifactId>
+	<artifactId>ssia.basic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ssia-ch2</name>
 	<description>Demo project for Spring Boot</description>
